# python-lightweight-ide

./: CMakeLists.txt  README.md
share/kumir2/python3language/: analyzer.py
share/kumir2/python3language/check_syntax/: introspector.py  syntax_highlighting.py
share/kumir2/python3language/types_analyzer2/: basic_type_check.py
src/launcher/: CMakeLists.txt
src/plugin/: analizerinstance.cpp  analizerinstance.h  tokenizerinstance.cpp  tokenizerinstance.h
